--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <ol>
 <li>You were the shadow to my light.
 <li>Did you feel us?</font>
-<li>Another start, You fade away.</ol></i>
-
+<li>Another start, You fade away.
+</ol></i>
 
 <center><img src="B1.jpg"><img src="B2.jpg"><img src="B3.jpg"></center>
-Afraid our aim is out of sight
-Wanna see us
+<dl>Afraid our aim is out of sight</dl>
+<dd>Wanna see</dd> <at>us</at>
 <p align=center>
 
 <b><font face="segoe script">Alive</font></b>
@@ -33,6 +33,7 @@ Wanna see us
 <li><font color="008800">Where are you now?</font>
 <li>　　　　　　　Were you only imaginary.</sup>
 </ul>
+
 Where are you now?
 　　　　　　　Atlantis.
 <p align=right>
